---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/list.rs
description: "Rejects duplicate #type keys in list"
expression: "{\"#list\": [], \"#type\": \"List<Int>\", \"#type\": \"List<String>\"}"
---
[31m[parser::object::duplicate-key] Error:[0m Parser
   ╭─[ <unknown>:1:37 ]
   │
 1 │ {"#list": [], "#type": "List<Int>", "#type": "List<String>"}
   │               ───┬───               ───┬───  
   │                  │                     ╰───── Duplicate key
   │                  │                           
   │                  ╰─────────────────────────── First occurrence of `#type`
   │ 
   │ Help: J-Expr does not allow duplicate keys in the same object. Each key must be unique.
───╯
